overflow x problem fixed

--- a/content/style.css
+++ b/content/style.css
@@ -35,7 +35,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   margin: 0;
+  padding: 0;
   overflow: overlay;
+  overflow-x: hidden;
 }
 ::-moz-selection {
   background: rgba(251, 251, 251, 0.6);
